--- a/index.html
+++ b/index.html
@@ -233,6 +233,46 @@
                   năm bản lề để thị trường chuyển tiếp sang một giai đoạn phát triển mới lành mạnh và bền vững hơn”, vị chuyên gia đánh giá.
                 </p>
               </div>
+
+              <div class="quote-area area-2">
+                <p class="sub-title sub-title-2">
+                  Hải Phòng -<br />
+                  điểm sáng thị trường
+                </p>
+                <div class="group_text group_text_4" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="300">
+                  <p class="text_content t-content">
+                    Nhìn nhận về bức tranh tổng quan thị trường bất động sản trên cả nước, Hội Môi giới Bất động sản Việt Nam đánh giá thị trường bất động sản Hải Phòng – một trong ba cực tăng trưởng
+                    kinh tế của miền Bắc, tiếp tục có nhiều tín hiệu khởi sắc. Đặc biệt, tại Thủy Nguyên – nơi đang được định hướng lên thành phố năm 2025, là đô thị thông minh gắn với trung tâm hành
+                    chính - chính trị mới của thành phố Hải Phòng, thị trường bất động sản có nhiều điểm sáng.
+                  </p>
+                </div>
+
+                <img src="assets/images/icon-quote.png" alt="" class="img img-icon-quote" />
+                <p class="quotes">
+                  “Chỉ sau hơn 2 tháng kể từ khi chính thức ra mắt, “Thành phố đảo Hoàng Gia” Vinhomes<br />
+                  Royal Island đã thu hút gần 100.000 khách hàng tham quan,<br />
+                  gần 2.000 khách đã đặt mua các căn biệt thự/nhà phố”.
+                </p>
+                <p class="quotes-author">Đại diện Vinhomes.</p>
+              </div>
+
+              <div class="group_image group_img_2">
+                <img src="assets/images/group_2_1.png" alt="" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="500" />
+                <img src="assets/images/group_2_2.png" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1500" data-aos-delay="1000" alt="" />
+              </div>
+              <img src="assets/images/img_3.jpg" alt="" class="img img-3" />
+
+              <div class="group_text group_text_5" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="300">
+                <p class="text_content t-content">
+                  Theo ông Phạm Mạnh Tùng - Giám đốc điều hành Diamond Land, tại thị trường thành phố Cảng, dự án Vinhomes Royal Island là tâm điểm thu hút sự quan tâm của thị trường, trong đó người
+                  mua là người ở Hải Phòng chiếm phần lớn, cho thấy người dân đất Cảng có sự quan tâm đặc biệt đối với dự án này.
+                </p>
+                <p class="text_content t-content">
+                  Theo bà Nguyễn Thùy Dung, “đòn bẩy” giúp Vinhomes Royal Island trở thành tâm điểm của thị trường phải kể đến vị trí độc đáo tại trung tâm hành chính mới Hải Phòng, Thủy Nguyên. Bởi
+                  theo quy hoạch, huyện đảo Thuỷ Nguyên sẽ được định hướng lên thành phố năm 2025. Thành phố cũng có kế hoạch dịch chuyển cư dân nội đô về phía Bắc sông Cấm, kéo theo thu hút đầu tư
+                  công với các công trình giao thông trọng điểm.
+                </p>
+              </div>
             </div>
           </div>
         </div>
