--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
           <div id="overlay"></div>
           <div class="my_container">
             <div class="section-1">
-              <img src="assets/images/img_1.jpg" alt="" class="img img-1" />
+              <img src="assets/images/img_1.jpg" alt="" class="img img-1" data-aos="zoom-out" data-aos-offset="300" data-aos-duration="1000" />
               <div class="group_image group_img_1">
                 <img src="assets/images/group_1_1.png" alt="" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="500" />
-                <img src="assets/images/group_1_2.png" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1500" data-aos-delay="1000" alt="" />
-                <img src="assets/images/group_1_3.png" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1500" data-aos-delay="1300" alt="" />
+                <img src="assets/images/group_1_2.png" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="1800" alt="" />
+                <img src="assets/images/group_1_3.png" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1200" data-aos-delay="1300" alt="" />
               </div>
             </div>
             <div class="section-2">
@@ -180,7 +180,7 @@
                 bất động sản quy mô, cơ sở hạ tầng phát triển và tiện ích khác biệt <br />
                 tại những vùng đất nhiều tiềm năng phát triển.
               </p>
-              <img src="assets/images/line.png" alt="" class="img img-line" />
+              <img src="assets/images/line.png" alt="" class="img img-line" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="300" />
               <div class="quote-area area-1">
                 <div class="group_text group_text_1" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="300">
                   <p class="text_content t-content">
@@ -194,13 +194,13 @@
                   </p>
                 </div>
 
-                <img src="assets/images/icon-quote.png" alt="" class="img img-icon-quote" />
-                <p class="quotes">“Niềm tin của khách hàng cũng ngày một cải thiện”.</p>
-                <p class="quotes-author">Anh Minh đánh giá.</p>
+                <img src="assets/images/icon-quote.png" alt="" class="img img-icon-quote" data-aos="fade" data-aos-duration="1000" data-aos-offset="300" data-aos-delay="300" />
+                <p class="quotes" data-aos="fade" data-aos-duration="1000" data-aos-offset="300" data-aos-delay="500">“Niềm tin của khách hàng cũng ngày một cải thiện”.</p>
+                <p class="quotes-author" data-aos="fade" data-aos-duration="1000" data-aos-offset="300" data-aos-delay="800">Anh Minh đánh giá.</p>
               </div>
             </div>
             <div class="section-3">
-              <p class="sub-title sub-title-1">Triển vọng phục hồi</p>
+              <p class="sub-title sub-title-1" data-aos="flip-down" data-aos-duration="800" data-aos-offset="300">Triển vọng phục hồi</p>
               <div class="group_text group_text_2" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="300">
                 <p class="text_content t-content">
                   Báo cáo mới đây của Hội Môi giới Bất động sản Việt Nam ghi nhận, quý I vừa qua, nhiều dự án quy mô hàng trăm đến vài chục nghìn ha, thậm chí giá trị đầu tư hàng tỷ USD được công bố,
@@ -215,7 +215,7 @@
                   quý IV/2023.
                 </p>
               </div>
-              <img src="assets/images/img_2.jpg" alt="" class="img img-2" />
+              <img src="assets/images/img_2.jpg" alt="" class="img img-2" data-aos="flip-down" data-aos-duration="1000" data-aos-offset="300" />
               <img src="assets/images/img_5.png" alt="" class="img img-5" />
 
               <div class="group_text group_text_3" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="300">
@@ -235,10 +235,8 @@
               </div>
 
               <div class="quote-area area-2">
-                <p class="sub-title sub-title-2">
-                  Hải Phòng -<br />
-                  điểm sáng thị trường
-                </p>
+                <p class="sub-title sub-title-2" data-aos="zoom-in" data-aos-duration="800" data-aos-offset="300">Hải Phòng -<br /></p>
+                <p class="sub-title sub-title-3" data-aos="zoom-out" data-aos-duration="800" data-aos-offset="300" data-aos-delay="300">điểm sáng thị trường</p>
                 <div class="group_text group_text_4" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="300">
                   <p class="text_content t-content">
                     Nhìn nhận về bức tranh tổng quan thị trường bất động sản trên cả nước, Hội Môi giới Bất động sản Việt Nam đánh giá thị trường bất động sản Hải Phòng – một trong ba cực tăng trưởng
@@ -247,20 +245,20 @@
                   </p>
                 </div>
 
-                <img src="assets/images/icon-quote.png" alt="" class="img img-icon-quote" />
-                <p class="quotes">
+                <img src="assets/images/icon-quote.png" alt="" class="img img-icon-quote" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="1000" />
+                <p class="quotes" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="1400" data-aos-delay="500">
                   “Chỉ sau hơn 2 tháng kể từ khi chính thức ra mắt, “Thành phố đảo Hoàng Gia” Vinhomes<br />
                   Royal Island đã thu hút gần 100.000 khách hàng tham quan,<br />
                   gần 2.000 khách đã đặt mua các căn biệt thự/nhà phố”.
                 </p>
-                <p class="quotes-author">Đại diện Vinhomes.</p>
+                <p class="quotes-author" data-aos="fade-right" data-aos-offset="100" data-aos-duration="1000" data-aos-delay="600">Đại diện Vinhomes.</p>
               </div>
 
               <div class="group_image group_img_2">
-                <img src="assets/images/group_2_1.png" alt="" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="500" />
-                <img src="assets/images/group_2_2.png" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1500" data-aos-delay="1000" alt="" />
+                <img src="assets/images/group_2_1.png" alt="" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="100" />
+                <img src="assets/images/group_2_2.png" data-aos="fade-left" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="100" alt="" />
               </div>
-              <img src="assets/images/img_3.jpg" alt="" class="img img-3" />
+              <img src="assets/images/img_3.jpg" alt="" class="img img-3" data-aos="fade-up" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="100" />
 
               <div class="group_text group_text_5" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="300">
                 <p class="text_content t-content">
@@ -272,6 +270,120 @@
                   theo quy hoạch, huyện đảo Thuỷ Nguyên sẽ được định hướng lên thành phố năm 2025. Thành phố cũng có kế hoạch dịch chuyển cư dân nội đô về phía Bắc sông Cấm, kéo theo thu hút đầu tư
                   công với các công trình giao thông trọng điểm.
                 </p>
+              </div>
+            </div>
+            <div class="section-4">
+              <div class="group_image group_img_3">
+                <img src="assets/images/group_3_1.png" alt="" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="1200" data-aos-delay="0" />
+                <img src="assets/images/group_3_6.png" data-aos="zoom-out" data-aos-offset="300" data-aos-duration="1200" data-aos-delay="500" alt="" />
+                <img src="assets/images/group_3_5.png" alt="" data-aos="fade-down-right" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="700" />
+
+                <img src="assets/images/group_3_3.png" alt="" data-aos="fade-up-right" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="900" />
+
+                <img src="assets/images/group_3_2.png" data-aos="fade-down-left" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="1100" alt="" />
+
+                <img src="assets/images/group_3_4.png" data-aos="fade-up" data-aos-offset="300" data-aos-duration="1200" data-aos-delay="1500" alt="" />
+              </div>
+
+              <div class="group_text group_text_6" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="300">
+                <p class="text_content t-content">
+                  Với lợi thế trọng điểm phát triển kinh tế, đảo Vũ Yên sẽ được hưởng lợi đáng kể với nhiều dự án hạ tầng kết nối, đặc biệt là 4 cây cầu bắc qua gồm cầu Vũ Yên 1 đã hoàn thành, cầu
+                  Hoàng Gia, dự kiến sẽ được hoàn thành vào tháng 8/2025 hoặc có thể sớm hơn, và sắp tới là cầu Ngô Quyền, cầu từ tBỉnh Khiêm sang Vũ Yên. “Khi các cây cầu đi vào vận hành, thời gian
+                  di chuyển sẽ được rút ngắn chỉ còn 5 – 10 phút, là lợi thế rất lớn cho dự án”, Chủ tịch HĐQT MICC Group nói.
+                </p>
+                <p class="text_content t-content">
+                  Bên cạnh đó, dự án cũng hưởng lợi từ quy hoạch đô thị đảo đặc biệt với tổng diện tích 877 ha, nằm trọn vẹn trên đảo Vũ Yên, được bao bọc bởi 3 con sông Bạch Đằng, Cấm và Ruột Lợn.
+                  Cùng với 2 tuyến đường cao tốc kế cận là Hà Nội – Hải Phòng và Hải Phòng – Quảng Ninh, khu đô thị sở hữu kết nối thuận tiện tới các khu vực trong tam giác kinh tế trọng điểm phía Bắc
+                  (Hà Nội - Hải Phòng - Quảng Ninh), cũng như tới các thành phố lớn trên thế giới qua hệ thống đường không, đường thủy và đường bộ. Lợi thế “tâm điểm kết nối” hứa hẹn mở ra tiềm năng
+                  tăng trưởng cho dự án về dài hạn.
+                </p>
+              </div>
+
+              <div class="group_image group_img_4">
+                <img src="assets/images/group_4_1.png" alt="" data-aos="flip-up" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="500" />
+                <img src="assets/images/group_4_2.png" data-aos="flip-up" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="1000" alt="" />
+              </div>
+
+              <img src="assets/images/bg_2.png" alt="" class="img img-6" />
+            </div>
+            <div class="section-5">
+              <p class="sub-title sub-title-4" data-aos="zoom-out" data-aos-duration="1000" data-aos-offset="300">
+                Ghi điểm với hệ sinh thái<br />
+                tiện ích hiện hữu
+              </p>
+              <div class="group_text group_text_6" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="300">
+                <p class="text_content t-content">
+                  Là một trong những nhà đầu tư xuống tiền tại Vinhomes Royal Island dịp này, anh Hoàng Anh (Hà Nội) cho rằng hệ sinh thái tiện ích đang dần hiện hữu tại đây là động lực khiến bất động
+                  sản tại đây sôi động và tăng trưởng trong thời gian tới. Ngày 26-27/4 vừa, công viên văn hóa Hàn Quốc K-Park, Quảng trường châu Âu Royal Square đã được khai trương kỹ thuật, kết hợp
+                  cùng VinBus lần đầu tiên xuất hiện tại Hải Phòng đưa đón miễn phí khách hàng tới trải nghiệm dự án.
+                </p>
+                <p class="text_content t-content">
+                  “Đô thị đảo này sẽ sớm trở thành điểm đến thu hút hàng trăm nghìn lượt khách mỗi ngày, mở ra cơ hội kinh doanh hấp dẫn. Dự án hấp dẫn tập khách hàng thượng lưu nhờ hệ tiện ích sang
+                  trọng đẳng cấp ngày càng được hoàn thiện, từ sân golf, quảng trường, công viên, học viện ngựa…”, anh Hàng Anh phân tích.
+                </p>
+                <p class="text_content t-content">
+                  Chị Hoài Thu (quận Kiến An) chọn mua biệt thự tại dự án bởi những tiện ích chưa từng có, từ sân golf 36 hố 160 ha; Công viên vui chơi giải trí gia đình với Safari thú độc đáo; Phố đi
+                  bộ văn hóa, vui chơi, mua sắm, ẩm thực bờ sông… đến bãi tắm nước biển riêng sau nhà. “Đây sẽ là không gian sống lý tưởng dành cho cả gia đình tôi”, chị Thu tâm sự.
+                </p>
+              </div>
+              <div class="slide-container">
+                <div class="swiper mySwiper">
+                  <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                      <img src="assets/images/slide-1.jpg" alt="" class="img img-slide" />
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="assets/images/slide-2.jpg" alt="" class="img img-slide" />
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="assets/images/slide-3.jpg" alt="" class="img img-slide" />
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="assets/images/slide-4.jpg" alt="" class="img img-slide" />
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="assets/images/slide-5.jpg" alt="" class="img img-slide" />
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
+              </div>
+              <img src="assets/images/bg_3.png" alt="" class="img img-7" />
+              <div class="group_text group_text_7" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="100">
+                <p class="text_content t-content">
+                  Theo ông Nguyễn Văn Minh – Phó tổng giám đốc Four Home, một trong những lợi thế của Vinhomes Royal Island mà ít có dự án nào có được là chủ đầu tư đã quan tâm đến việc đưa dân cư về
+                  ở và kinh doanh ngay từ khi bán hàng. Do đó, họ chú trọng hoàn thiện tiện ích hiện hữu, tạo lập một khu đô thị đáng sống, tạo lập động lực tăng trưởng tốt cho bất động sản về dài
+                  hạn. Song song đó, nhiều nhà đầu tư tại Hải Phòng cũng đánh giá cao các dự án của chủ đầu tư Vinhomes do các dự án trước đây của đơn vị này đều mang về cho họ khoản lợi nhuận hấp
+                  dẫn.
+                </p>
+                <p class="text_content t-content">
+                  Hiện tại, chủ đầu tư mở bán phân khu Quý Tộc, Golfland, Tài Lộc, Miyabi, Đảo Vua... với mức giá hấp dẫn cùng chính sách trả góp đến 15 năm. Hiện, khách hàng mua dự án Vinhomes Royal
+                  Island được vay tới 70% giá trị sản phẩm, hỗ trợ lãi suất 0% trong vòng 3 năm. Trường hợp không vay được chiết khấu 10,5%. Những khách hàng mua shop được hỗ trợ hoàn thiện và cam kết
+                  lợi nhuận. Bên cạnh đó, khách hàng sẽ được mua với giá gốc từ chủ đầu tư nhờ cơ chế công khai giá, trả giá minh bạch.
+                </p>
+              </div>
+              <div class="group_image group_img_5">
+                <img src="assets/images/group_5_1.png" alt="" data-aos="zoom-out" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="300" />
+                <img src="assets/images/group_5_2.png" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="1200" data-aos-delay="700" alt="" />
+                <img src="assets/images/group_5_3.png" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="1200" data-aos-delay="1200" alt="" />
+              </div>
+              <div class="group_text group_text_7" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="300">
+                <p class="text_content t-content">
+                  Theo Hội Môi giới Bất động sản Việt Nam, các thông tin về hạ tầng cũng như thông tin về các dự án khu đô thị mới, đặc biệt là Vinhomes Royal Island sẽ tạo động lực, kéo theo làn sóng
+                  đầu tư với các triển vọng phát triển tích cực cho thị trường bất động sản Hải Phòng. Song song đó, dự án này cũng được chủ đầu tư kỳ vọng là cú hích thúc đẩy thị trường bất động sản
+                  phát triển mạnh mẽ trong chu kỳ mới, trong bối cảnh thị trường đang ở thời điểm tốt để mua nhà, đầu tư bất động sản.
+                </p>
+                <p class="text_content t-content">
+                  Với ông Nguyễn Văn Minh, nhờ lợi thế tâm điểm thu hút FDI, Hải Phòng đã và đang thu hút đông đảo chuyên gia quốc tế đổ về an cư. Tập khách hàng này sẵn sàng chi trả nhiều hơn để thuê
+                  nhà sinh sống, công tác lâu dài tại thành phố Cảng. Do vậy, dư địa đầu tư bất động sản tại Hải Phòng còn nhiều. “Trong ba năm tới, Hải Phòng vẫn là thị trường hút nhà đầu tư, góp sức
+                  cho sự hấp dẫn này có thể kể đến thành phố đảo Vinhomes Royal Island", ông Minh nói.
+                </p>
+              </div>
+              <img src="assets/images/img_9.png" alt="" class="img img-9" />
+              <div class="author pc">
+                <p>Nội dung: <span>Trương Hà</span> - Thiết kế: <span>Thái Hưng</span> - Kỹ thuật: <span>Sơn Bá</span></p>
               </div>
             </div>
           </div>
