--- a/index.html
+++ b/index.html
@@ -167,11 +167,17 @@
           <div id="overlay"></div>
           <div class="my_container">
             <div class="section-1">
-              <img src="assets/images/img_1.jpg" alt="" class="img img-1" data-aos="zoom-out" data-aos-offset="300" data-aos-duration="1000" />
-              <div class="group_image group_img_1">
+              <img src="assets/images/img_1.jpg" alt="" class="img img-1 pc" data-aos="zoom-out" data-aos-offset="300" data-aos-duration="1000" />
+              <div class="group_image group_img_1 pc">
                 <img src="assets/images/group_1_1.png" alt="" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="500" />
                 <img src="assets/images/group_1_2.png" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="1800" alt="" />
                 <img src="assets/images/group_1_3.png" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1200" data-aos-delay="1300" alt="" />
+              </div>
+              <div class="group_image group_img_1 mobile">
+                <img src="assets/images/group_1_4_m.png" alt="" data-aos="zoom-out" data-aos-offset="300" data-aos-duration="1000" />
+                <img src="assets/images/group_1_1_m.png" alt="" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="500" />
+                <img src="assets/images/group_1_2_m.png" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="1800" alt="" />
+                <img src="assets/images/group_1_3_m.png" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1200" data-aos-delay="1300" alt="" />
               </div>
             </div>
             <div class="section-2">
@@ -382,7 +388,7 @@
                 </p>
               </div>
               <img src="assets/images/img_9.png" alt="" class="img img-9" />
-              <div class="author pc">
+              <div class="author">
                 <p>Nội dung: <span>Trương Hà</span> - Thiết kế: <span>Thái Hưng</span> - Kỹ thuật: <span>Sơn Bá</span></p>
               </div>
             </div>
