--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link type="text/css" rel="stylesheet" href="assets/css/main.css" />
     <!-- End stylesheet -->
 
-    <title>Nhớ sửa title nhé</title>
+    <title>Tín hiệu khởi sắc của thị trường bất động sản</title>
   </head>
 
   <body>
@@ -181,14 +181,33 @@
               </div>
             </div>
             <div class="section-2">
-              <p class="text_title" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="300">
+              <p class="text_title pc" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="300">
                 Giới đầu tư cho biết dòng tiền đang đổ về dự án <br />
                 bất động sản quy mô, cơ sở hạ tầng phát triển và tiện ích khác biệt <br />
                 tại những vùng đất nhiều tiềm năng phát triển.
               </p>
+
+              <p class="text_title mobile" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="100">
+                Giới đầu tư cho biết dòng tiền đang đổ về dự án <br />
+                bất động sản quy mô, cơ sở hạ tầng phát triển và tiện ích khác biệt <br />
+                tại những vùng đất nhiều tiềm năng phát triển.
+              </p>
+
               <img src="assets/images/line.png" alt="" class="img img-line" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="300" />
               <div class="quote-area area-1">
-                <div class="group_text group_text_1" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="300">
+                <div class="group_text group_text_1 pc" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="300">
+                  <p class="text_content t-content">
+                    Hai năm nay, anh Nguyễn Văn Minh - Phó tổng giám đốc Four Home mới cảm nhận rõ nét về tín hiệu khởi sắc của thị trường bất động sản, khi nhiều chủ đầu tư lớn rục rịch “xuất kích”,
+                    “bung hàng”, đặc biệt là dự án ấp ủ nhiều năm. Các doanh nghiệp phân phối như công ty anh cũng tất bật tham gia vào hoạt động kinh doanh dự án, với con số giao dịch ấn tượng.
+                    “Trong tháng 4, nhiều đại lý phân phối ghi nhận 100 - 200 booking (lượng đặt cọc) mỗi tuần. Các dự án mở bán mới dịp này đều có lượng hấp thụ tương đối tốt", anh Minh cho biết.
+                  </p>
+                  <p class="text_content t-content">
+                    Đại diện Four Home đánh giá thời điểm này thị trường “thậm chí tốt hơn thời điểm sôi động nhất là năm 2021”. Bởi lẽ, khi đó, những đơn vị phân phối bất động sản chỉ ghi nhận doanh
+                    thu khoảng 1.000-2.000 tỷ đồng. Từ đầu năm nay, nhiều doanh nghiệp đã ghi nhận doanh thu một tháng 3.000-4.000 tỷ đồng.
+                  </p>
+                </div>
+
+                <div class="group_text group_text_1 mobile" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="100">
                   <p class="text_content t-content">
                     Hai năm nay, anh Nguyễn Văn Minh - Phó tổng giám đốc Four Home mới cảm nhận rõ nét về tín hiệu khởi sắc của thị trường bất động sản, khi nhiều chủ đầu tư lớn rục rịch “xuất kích”,
                     “bung hàng”, đặc biệt là dự án ấp ủ nhiều năm. Các doanh nghiệp phân phối như công ty anh cũng tất bật tham gia vào hoạt động kinh doanh dự án, với con số giao dịch ấn tượng.
@@ -201,7 +220,10 @@
                 </div>
 
                 <img src="assets/images/icon-quote.png" alt="" class="img img-icon-quote" data-aos="fade" data-aos-duration="1000" data-aos-offset="300" data-aos-delay="300" />
-                <p class="quotes" data-aos="fade" data-aos-duration="1000" data-aos-offset="300" data-aos-delay="500">“Niềm tin của khách hàng cũng ngày một cải thiện”.</p>
+                <p class="quotes" data-aos="fade" data-aos-duration="1000" data-aos-offset="300" data-aos-delay="500">
+                  “Niềm tin của khách hàng<br class="mobile" />
+                  cũng ngày một cải thiện”.
+                </p>
                 <p class="quotes-author" data-aos="fade" data-aos-duration="1000" data-aos-offset="300" data-aos-delay="800">Anh Minh đánh giá.</p>
               </div>
             </div>
@@ -222,7 +244,8 @@
                 </p>
               </div>
               <img src="assets/images/img_2.jpg" alt="" class="img img-2" data-aos="flip-down" data-aos-duration="1000" data-aos-offset="300" />
-              <img src="assets/images/img_5.png" alt="" class="img img-5" />
+              <img src="assets/images/img_5.png" alt="" class="img img-5 pc" />
+              <img src="assets/images/img_5_m.png" alt="" class="img img-5 mobile" />
 
               <div class="group_text group_text_3" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="300">
                 <p class="text_content t-content">
@@ -260,11 +283,17 @@
                 <p class="quotes-author" data-aos="fade-right" data-aos-offset="100" data-aos-duration="1000" data-aos-delay="600">Đại diện Vinhomes.</p>
               </div>
 
-              <div class="group_image group_img_2">
+              <div class="group_image group_img_2 pc">
                 <img src="assets/images/group_2_1.png" alt="" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="100" />
                 <img src="assets/images/group_2_2.png" data-aos="fade-left" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="100" alt="" />
               </div>
-              <img src="assets/images/img_3.jpg" alt="" class="img img-3" data-aos="fade-up" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="100" />
+              <img src="assets/images/img_3.jpg" alt="" class="img img-3 pc" data-aos="fade-up" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="100" />
+
+              <div class="group_image group_img_2 mobile">
+                <img src="assets/images/group_2_1_m.png" alt="" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="100" />
+                <img src="assets/images/group_2_2_m.png" data-aos="fade-left" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="100" alt="" />
+                <img src="assets/images/group_2_3_m.png" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="100" alt="" />
+              </div>
 
               <div class="group_text group_text_5" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="300">
                 <p class="text_content t-content">
@@ -279,7 +308,7 @@
               </div>
             </div>
             <div class="section-4">
-              <div class="group_image group_img_3">
+              <div class="group_image group_img_3 pc">
                 <img src="assets/images/group_3_1.png" alt="" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="1200" data-aos-delay="0" />
                 <img src="assets/images/group_3_6.png" data-aos="zoom-out" data-aos-offset="300" data-aos-duration="1200" data-aos-delay="500" alt="" />
                 <img src="assets/images/group_3_5.png" alt="" data-aos="fade-down-right" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="700" />
@@ -290,7 +319,17 @@
 
                 <img src="assets/images/group_3_4.png" data-aos="fade-up" data-aos-offset="300" data-aos-duration="1200" data-aos-delay="1500" alt="" />
               </div>
+              <div class="group_image group_img_3 mobile">
+                <img src="assets/images/group_3_1_m.png" alt="" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="1200" data-aos-delay="0" />
+                <img src="assets/images/group_3_6_m.png" data-aos="zoom-out" data-aos-offset="300" data-aos-duration="1200" data-aos-delay="500" alt="" />
+                <img src="assets/images/group_3_5_m.png" alt="" data-aos="fade-down-right" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="700" />
 
+                <img src="assets/images/group_3_3_m.png" alt="" data-aos="fade-up-right" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="900" />
+
+                <img src="assets/images/group_3_2_m.png" data-aos="fade-down-left" data-aos-offset="300" data-aos-duration="1000" data-aos-delay="1100" alt="" />
+
+                <img src="assets/images/group_3_4_m.png" data-aos="fade-up" data-aos-offset="300" data-aos-duration="1200" data-aos-delay="1500" alt="" />
+              </div>
               <div class="group_text group_text_6" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="300">
                 <p class="text_content t-content">
                   Với lợi thế trọng điểm phát triển kinh tế, đảo Vũ Yên sẽ được hưởng lợi đáng kể với nhiều dự án hạ tầng kết nối, đặc biệt là 4 cây cầu bắc qua gồm cầu Vũ Yên 1 đã hoàn thành, cầu
@@ -388,8 +427,14 @@
                 </p>
               </div>
               <img src="assets/images/img_9.png" alt="" class="img img-9" />
-              <div class="author">
+              <div class="author pc">
                 <p>Nội dung: <span>Trương Hà</span> - Thiết kế: <span>Thái Hưng</span> - Kỹ thuật: <span>Sơn Bá</span></p>
+              </div>
+              <div class="author mobile">
+                <p>
+                  Nội dung: <span>Trương Hà</span> - Thiết kế: <span>Thái Hưng</span><br />
+                  Kỹ thuật: <span>Sơn Bá</span>
+                </p>
               </div>
             </div>
           </div>
